# CSR4MPI

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
_codeql_build_dir/: DartConfiguration.tcl  Makefile
_codeql_build_dir/bench/: Makefile  csr4mpi_bench  csr4mpi_bench_spmv
_codeql_build_dir/src/: Makefile
_codeql_build_dir/tests/: Makefile  csr4mpi_tests  csr4mpi_tests[1]_include.cmake  csr4mpi_tests[1]_tests.cmake
_codeql_build_dir/tools/: Makefile  csr4mpi_gen_mm
bench/: CMakeLists.txt  bench_large_spmv.cpp  bench_operations.cpp
include/: BlasAdapter.h  CSRComm.h  CSRMatrix.h  CSRMatrixBuilder.h  CommPattern.h  DistributedOps.h  Distribution.h  Global.h  MatrixMarketLoader.h  MumpsAdapter.h  Operations.h  PardisoAdapter.h  PetscAdapter.h  TrilinosAdapter.h
scripts/: download_matrices.sh
src/: BlasAdapter.cpp  CMakeLists.txt  CSRComm.cpp  CSRMatrix.cpp  CommPattern.cpp  DistributedOps.cpp  Distribution.cpp  MatrixMarketLoader.cpp  MumpsAdapter.cpp  Operations.cpp
tests/: CMakeLists.txt  test_all_scalar_types.cpp  test_blas_placeholder.cpp  test_csr_builder.cpp  test_csr_matrix.cpp  test_csrcomm_optimization.cpp  test_distribution_pattern.cpp  test_matrix_market.cpp  test_mpi_mumps_adapter.cpp  test_mpi_symmetric_spmm.cpp  test_mumps_adapter.cpp  test_operations.cpp  test_operations_correctness.cpp  test_symmetric.cpp
tests/data/: dup3.mtx  lap5.mtx  small4.mtx  sym3_lower.mtx
tools/: CMakeLists.txt  gen_mm.cpp
